--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-scripts": "^5.0.1",
-    "react-spring": "^8.0.27"
+    "next": "14.2.15",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-scripts": "^3.0.1",
+    "react-spring": "9.7.4"
   }
 }
