--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "next": "14.2.15",
-    "react": "18.3.1",
+    "react": "18.2.0",
     "react-dom": "18.3.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.1",
     "react-spring": "9.7.4"
   }
 }
