--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.15",
-    "react": "18.2.0",
+    "next": "14.2.12",
+    "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-scripts": "5.0.1",
-    "react-spring": "9.7.4"
+    "react-spring": "^9.7.4"
   }
 }
